; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-zynq/extr_slcr.c_zynq_slcr_get_device_id.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-zynq/extr_slcr.c_zynq_slcr_get_device_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SLCR_PSS_IDCODE = common dso_local global i32 0, align 4
@SLCR_PSS_IDCODE_DEVICE_SHIFT = common dso_local global i32 0, align 4
@SLCR_PSS_IDCODE_DEVICE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zynq_slcr_get_device_id() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @SLCR_PSS_IDCODE, align 4
  %3 = call i32 @zynq_slcr_read(i32* %1, i32 %2)
  %4 = load i32, i32* @SLCR_PSS_IDCODE_DEVICE_SHIFT, align 4
  %5 = load i32, i32* %1, align 4
  %6 = ashr i32 %5, %4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* @SLCR_PSS_IDCODE_DEVICE_MASK, align 4
  %8 = load i32, i32* %1, align 4
  %9 = and i32 %8, %7
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @zynq_slcr_read(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
